--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container ms-0 mt-5">
+<section class="mx-auto mt-5 px-3">
   <div class="row">
     <div class="col">
       <div class="card">
@@ -28,5 +28,12 @@
         </div>
       </div>
     </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <app-random-countries-widget></app-random-countries-widget>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
