--- a/src/app/components/widgets/random-countries/random-countries.component.html
+++ b/src/app/components/widgets/random-countries/random-countries.component.html
@@ -1,6 +1,6 @@
 <!-- random-countries-widget.component.html -->
-<div class="random-countries-widget mt-4">
-  <h3 class="text-center">Three Random Countries and Upcoming Holidays</h3>
+<div class="random-countries-widget">
+  <h3 class="text-center h1 mb-4">Three Random Countries and Upcoming Holidays</h3>
 
   <div *ngIf="loading" class="text-center">
     <div class="spinner-border text-primary" role="status">
