--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -1,1 +1,56 @@
-<p>country works!</p>
+<div class="container country-holidays-container mt-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <a [routerLink]="['/']" class="btn btn-outline-secondary btn-lg"> <i class="bi bi-house-fill"></i> Back to Home </a>
+  </div>
+  <h1 class="text-center mb-4">
+    <span [ngClass]="'flag-icon flag-icon-' + country?.countryCode?.toLowerCase()"></span>
+    <span class="d-inline-block ms-2">Public Holidays in {{ country?.name }} {{ currentYear }}</span>
+  </h1>
+
+  <div *ngIf="!loading && !error" class="text-center mb-4">
+    <ng-container *ngFor="let year of years">
+      <button
+        [ngClass]="{
+          'btn me-2 mb-2': true,
+          'btn-primary': year === currentYear,
+          'btn-outline-primary': year !== currentYear
+        }"
+        (click)="onYearChange(year)"
+        [disabled]="year === currentYear">
+        {{ year }}
+      </button>
+    </ng-container>
+  </div>
+
+  <div *ngIf="loading" class="text-center">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
+  <div *ngIf="error" class="alert alert-danger text-center">{{ error }}</div>
+
+  <table *ngIf="!loading && !error" class="table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Holiday Name</th>
+        <th>Type</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let holiday of holidays">
+        <td>{{ getLocateDate(holiday.date) }}</td>
+        <td>
+          <div>
+            {{ holiday.localName }}
+          </div>
+          <div>
+            {{ holiday.name }}
+          </div>
+        </td>
+        <td>{{ holiday.types ? holiday.types.join(', ') : 'Unknown Type' }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
