fix: style. add not-found page

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,8 @@
+.homePage {
+  max-height: 100vh;
+  overflow: hidden;
+}
+
 .card {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
