--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="mx-auto mt-5 px-3">
+<section class="homePage mx-auto mt-5 px-3">
   <div class="row">
     <div class="col">
       <div class="card">
