--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,29 +5,41 @@
         <div class="card-body">
           <h1 class="text-center mb-4">Search for a Country</h1>
           <div class="form-group mb-4">
-            <input type="text" placeholder="Enter country name" [formControl]="searchTerm" class="form-control" />
+            <input
+              type="text"
+              placeholder="Enter country name"
+              name="Search"
+              aria-label="Search"
+              [formControl]="searchTerm"
+              class="form-control" />
           </div>
 
-          <div *ngIf="countries.length > 0">
-            <h2 class="mt-4">Countries List</h2>
-            <ul class="countries-list list-group">
-              <li
-                *ngFor="let country of countries"
-                class="list-group-item d-flex justify-content-between align-items-center">
-                <a
-                  [routerLink]="['/country', country.name]"
-                  [queryParams]="{ code: country.countryCode }"
-                  class="text-decoration-none">
-                  {{ country.name }}
-                </a>
-                <span class="badge bg-primary rounded-pill">{{ country.countryCode }}</span>
-              </li>
-            </ul>
-          </div>
+          <ng-container *ngIf="countries$ | async as countriesList">
+            <div *ngIf="countriesList.length > 0">
+              <h2 class="mt-4">Countries List</h2>
+              <ul class="countries-list list-group">
+                <li
+                  *ngFor="let country of countriesList"
+                  class="list-group-item d-flex justify-content-between align-items-center">
+                  <a
+                    [routerLink]="['/country', country.name]"
+                    [queryParams]="{ code: country.countryCode }"
+                    class="text-decoration-none">
+                    {{ country.name }}
+                  </a>
+                  <span class="badge bg-primary rounded-pill">{{
+                    country.countryCode
+                  }}</span>
+                </li>
+              </ul>
+            </div>
 
-          <div *ngIf="!countries.length && searchTerm.value" class="alert alert-warning mt-4">
-            <p class="mb-0">No countries found.</p>
-          </div>
+            <div
+              *ngIf="!countriesList.length && searchTerm.value"
+              class="alert alert-warning mt-4">
+              <p class="mb-0">No countries found.</p>
+            </div>
+          </ng-container>
         </div>
       </div>
     </div>
