--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="homePage mx-auto px-3">
   <div class="row">
-    <div class="col mt-5">
+    <div class="col mt-3 mt-md-5">
       <div class="card">
         <div class="card-body">
           <h1 class="text-center mb-4">Search for a Country</h1>
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <div class="col mt-5">
+    <div class="col mt-3 mt-md-5">
       <div class="card">
         <div class="card-body">
           <app-random-countries-widget></app-random-countries-widget>
